--- a/src/index.css
+++ b/src/index.css
@@ -2,21 +2,31 @@
 
 /* Page background */
 .fixedbackground{
-  background-image: url('..//src/Assets/footer\ img.png');
+  background-image: url('..//src/Assets/bannerimg.png');
+      min-height: 60vh;
+  background-attachment: scroll;
+  display: flex;
+  flex-direction: column;
+}
+
+    .fixedbackground2{
+     background-image: url('..//src/Assets/footer\ img.png');
      background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
     height: 300px;
+    
   
 }
-.portfolio-root {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: #000000; /* plain white */
-  min-height: 100vh;
-  color: #000;
-  margin: 0;
+.header img {
+  width: 100%;        
+  height: auto;       
+  max-width: 100%;    
+  display: block;     
+  margin: 0 auto;     
 }
+
 
 /* Header / Hero */
 .portfolio-hero {
@@ -43,8 +53,8 @@
 
 /* About */
 #about {
-  background: #f5f5f5;
-  color: #000;
+  background: #000000b9;
+  color: #ffffff;
   padding: 40px 20px;
   max-width: 900px;
   margin: 20px auto;
@@ -61,12 +71,12 @@
 /* Skills */
 #skills {
   padding: 40px 20px;
-  background: #eee;
+  background: #000000e3;
   margin-bottom: 20px;
 }
 
 
-/* Projects */
+/* Projectsyyyyy */
 #projects {
   padding: 40px 20px;
   background: #fafafa;
@@ -130,5 +140,8 @@ body, html {
   }
   #projects .w-75 {
     width: 100% !important;
+  }
+  .fixedbackground{
+    width:100% ;
   }
 }
