--- a/src/index.css
+++ b/src/index.css
@@ -138,4 +138,16 @@ body, html {
   .fixedbackground{
     width:100% ;
   }
+    .bannerimg {
+    height: 250px !important;
+    margin-left: 30px;
+  }
 }
+@media (max-width: 576px) {
+  .nav .nav-link {
+    padding-left: 0.5rem !important;
+    padding-right: 0.5rem !important;
+    font-size: 14px; /* smaller text */
+  }
+}
+
