--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 
     .fixedbackground2{
-     background-image: url('..//src/Assets/footerimg.png');
+     background-image: url('..//src/assets/footerimg.png');
      background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
