--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,20 @@
 
-html, body {
+html body {
   height: 100%;
   margin: 0;
    padding: 0;
    overflow-x: hidden;
    font-family: "Poppins", sans-serif;
-   background: linear-gradient(to right, rgba(0, 0, 255, 0.7) 0%, rgba(238, 130, 238, 0.7) 40%, rgba(0, 0, 255, 0.7) 100%);
-  background-attachment: fixed;
-  color: #fff;
+   color: #000000;
+   font-size: 20px;
+   background-image: url("Assets/backgroundimg1.jpg ") ;
+   background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    
 }
+
 .navbar {
   background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(6px);
@@ -42,33 +48,44 @@ html, body {
 
 
 
-#about{
+.about-card
+{
   background: rgba(0, 0, 0, 0.45);
    backdrop-filter: blur(8px);
    border-radius: 14px;
   padding: 50px 25px;
    margin: 30px auto;
   max-width: 1000px;
-  box-shadow: 0 6px 14px rgba(0,0,0,0.3);
+   transition: transform 0.3s ease-in-out;
 }
 
 
 .project-card,
 .skill-card,
-.contact-card {
-   background: rgba(255, 255, 255, 0.08);
+.contact-card
+ {
+  background: rgba(0, 0, 0, 0.315);
+   backdrop-filter: blur(10px);
     border-radius: 14px;
    padding: 20px;
   margin: 15px auto;
-  backdrop-filter: blur(10px);
-   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
   transition: transform 0.3s ease-in-out;
 }
 
 .project-card:hover,
 .skill-card:hover,
-.contact-card:hover {
+.contact-card:hover,
+.about-card:hover
+ {
   transform: translateY(-6px);
+  box-shadow:0 6px 6px 2px rgba(0, 17, 255, 0.384);
+}
+.nav-item{
+    transition: transform 0.3s ease-in-out;
+}
+.nav-item:hover{
+  transform: translateY(-6px);
+  box-shadow:0 6px 6px 2px rgba(0, 17, 255, 0.384);
 }
 
 
