--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 
 html body {
   height: 100%;
-  margin: 0;
+   margin: 0;
    padding: 0;
    overflow-x: hidden;
    font-family: "Poppins", sans-serif;
@@ -78,14 +78,15 @@ html body {
 .about-card:hover
  {
   transform: translateY(-6px);
-  box-shadow:0 6px 6px 2px rgba(0, 17, 255, 0.384);
+  border: 1px solid blue;
+  box-shadow: 0 6px 6px 2px rgba(0, 17, 255, 0.384);
 }
 .nav-item{
     transition: transform 0.3s ease-in-out;
 }
 .nav-item:hover{
   transform: translateY(-6px);
-  box-shadow:0 6px 6px 2px rgba(0, 17, 255, 0.384);
+  box-shadow: 0 6px 6px 2px rgba(0, 17, 255, 0.384);
 }
 
 
@@ -107,12 +108,11 @@ html body {
     position: absolute;
      top: 70px;
      left: 0;
-    right: 0;
+     right: 0;
       background: rgba(0,0,0,0.8);
      padding: 20px;
     display: none; 
   }
-
 
 }
 
