--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,15 @@
-html {
+html,body {
   height: 100%;
   margin: 0;
   padding: 0;
   overflow-x: hidden; 
   font-family: "Poppins", sans-serif;
   color: #000000;
-
-  
-}
-body::before {
-  position: relative;
   background-image: url("Assets/backgroundimg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  background-color: #000000;
-  content: "";
-  position: fixed;
-  opacity: 95%;
-  inset: 0;
-  z-index: -1;
 }
 .navbar {
   background: rgba(0, 0, 0, 0.5);
@@ -57,7 +46,7 @@ body::before {
 }
 .nav-item:hover {
   transform: translateY(-6px);
-  box-shadow: 0 6px 6px 2px rgba(0, 17, 255, 0.384);
+  box-shadow: 0 6px 6px 2px rgba(26, 152, 236, 0.384);
 }
 
 
@@ -78,8 +67,8 @@ body::before {
 .contact-card:hover,
 .about-card:hover {
   transform: translateY(-6px);
-  border: 1px solid blue;
-  box-shadow: 0 6px 6px 2px rgba(0, 17, 255, 0.384);
+  border: 1px solid rgba(26, 152, 236, 0.384);
+  box-shadow: 0 6px 6px 2px rgba(17, 145, 230, 0.479);
 }
 
 @media (max-width: 768px) {
